Добавил reg page, поменял дизайн осн стр

--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
 	<link rel="stylesheet" href="./css/mobile.css">
 	<script type="text/javascript" src="./script.js"></script>
 	<script src="https://kit.fontawesome.com/92122ceae8.js"></script>
-	<title>$Cash$</title>
+	<title>DogeCash</title>
 </head>
 <body>
 	<header>
-	<div class="head"></div><div class="logo">Cash</div>
+	<div class="head"></div><div class="logo"><i class="fas fa-wallet"></i>DogeCash</div>
 	<div class="auth">
 		<form method="post" action="">
 			<input type="text" id="login" name="email" placeholder="Email" required="">
 			<input type="password" id="code" name="password" placeholder="Пароль" required="">
-			<input class="submit-btn" type="submit" name="submit777" value="Войти">
+			<input type="submit" name="submit777" value="Войти" class="submit-btn">
 		</form>
 			<hr>
-		<center><button type="button" class="connect-btn"><i class="fas fa-plus"></i> Подключиться</button></center>
+		<center><button type="button" class="connect-btn" onclick="location.href = './reg.html';
+"><i class="fas fa-plus"></i> Подключиться</button></center>
 	</div>
 	</header>
 	<div class="content"></div>
