--- a/reg.html
+++ b/reg.html
@@ -37,7 +37,7 @@
 		}
 
 		body {
-			background: url("./images/black-orchid.png") repeat #0c0c0c;
+			background: url("./images/black-orchid.png") repeat #212121;
 			color: #828282;
 		}
 
