--- a/index.html
+++ b/index.html
@@ -12,15 +12,21 @@
 <body>
 	<header>
 	<div class="head"></div><div class="logo"><i class="fas fa-wallet"></i>DogeCash</div>
+
 	<div class="auth">
-		<form method="post" action="">
-			<input type="text" id="login" name="email" placeholder="Email" required="">
-			<input type="password" id="code" name="password" placeholder="Пароль" required="">
-			<input type="submit" name="submit777" value="Войти" class="submit-btn">
-		</form>
+	<div class="main-info">Платёжная платформа Doge Cash<br>
+	<center>Наши клиенты :</center>
+		<div class="block">10K+<span>УСПЕШНЫЕ ПРЕДПРИНИМАТЕЛИ</span></div>
+		<div class="block">100K+<span>ВЛАДЕЛЬЦЫ ЭЛЕКТРОННЫХ ДЕНЕГ</span></div>
+		<div class="block">5K+<span>ФИНАНСИСТЫ</span></div>
+	</div>
+	<form method="post" action="">
+		<input type="text" id="login" name="email" placeholder="Email" required="">
+		<input type="password" id="code" name="password" placeholder="Пароль" required="">
+		<input type="submit" name="submit777" value="Войти" class="submit-btn">
+	</form>
 			<hr>
-		<center><button type="button" class="connect-btn" onclick="location.href = './reg.html';
-"><i class="fas fa-plus"></i> Подключиться</button></center>
+	<center><button type="button" class="connect-btn" onclick="location.href = './reg.html';"><i class="fas fa-plus"></i> Подключиться</button></center>
 	</div>
 	</header>
 	<div class="content"></div>
