--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<input type="submit" name="submit" value="Войти" class="submit-btn">
 	</form>
 			<hr>
-	<center><button type="button" class="connect-btn" onclick="location.href = './reg.html';"><i class="fas fa-plus"></i> Подключиться</button></center>
+	<center><button type="button" class="connect-btn" onclick="location.href = './reg.php';"><i class="fas fa-plus"></i> Подключиться</button></center>
 	</div>
 	</header>
 	<div class="content"></div>
