--- a/index.html
+++ b/index.html
@@ -29,7 +29,15 @@
 	<center><button type="button" class="connect-btn" onclick="location.href = './reg.php';"><i class="fas fa-plus"></i> Подключиться</button></center>
 	</div>
 	</header>
-	<div class="content"></div>
+	<div class="content">
+		<div class="top-info">
+			<div class="top-block">
+				<h2></h2>
+			</div>
+			<div class="top-block"></div>
+			<div class="top-block"></div>
+		</div>
+	</div>
 	<footer></footer>
 </body>
 </html>
