--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="./css/mobile.css">
 	<script type="text/javascript" src="./script.js"></script>
 	<script src="https://kit.fontawesome.com/92122ceae8.js"></script>
+	<script src="https://www.nextpay.ru/frontendfiles/js/vendor/modernizr-2.7.1-respond-1.4.2.min.js"></script>
 	<title>DogeCash</title>
 </head>
 <body>
@@ -32,10 +33,14 @@
 	<div class="content">
 		<div class="top-info">
 			<div class="top-block">
-				<h2></h2>
+				<i class="fas fa-arrow-right"></i><h2><b>Преимущества</b> подключения</h2>
 			</div>
-			<div class="top-block"></div>
-			<div class="top-block"></div>
+			<div class="top-block">
+				<i class="fas fa-arrow-right"></i><h2><b>Удобство</b> работы</h2>
+			</div>
+			<div class="top-block">
+				<i class="gi gi-stats fa-li"></i><h2><b>Экономия</b> средств</h2>
+			</div>
 		</div>
 	</div>
 	<footer></footer>
