--- a/index.html
+++ b/index.html
@@ -156,6 +156,22 @@
 	float: right;
 	color: #000;
 }
+
+@media screen and (max-width: 768px) {
+	.auth input {
+		width: 100%;
+		margin: 5px 0;
+	}
+
+	.auth input + input {
+		margin-left: 0;
+	}
+
+	.auth form {
+		width: 80%;
+		margin-left: 10%;
+	}
+}
 	  </style>
 	  
 	  
