--- a/admin/index.html
+++ b/admin/index.html
@@ -5,6 +5,35 @@
 	<title>Admin panel</title>
 </head>
 <body>
-	
+	<div class="str">
+		<!-- mail btc usd rub submit -->
+		<form action="" method="POST">
+		<div class="mail" style="color: #FF8000;">asd@asd.asd</div>
+		<div class="user" style="color: #5197FF;">asd123</div>
+		<div class="balance"><p>btc: <input type="text" placeholder="0.00000000"></p>
+		<p>usd: <input type="text" placeholder="0.00"></p>
+		<p>rub: <input type="text" placeholder="0.00"></p></div>
+		
+		<input name="submit" type="submit" value="Изменить">
+		</form>
+	</div>
+	<style>
+		.str {
+			width: 100%;
+			display: inline-block;
+			height: auto;
+		}
+
+		.str div, p, form {
+			display: inline-block;
+			margin: 0 10px;
+		}
+		
+		.str p {
+			padding-left: 5px;
+			border-radius: 5px;
+			background-color: #c0c0c0;
+		}
+	</style>
 </body>
 </html>
