--- a/admin/index.html
+++ b/admin/index.html
@@ -8,18 +8,87 @@
 	<div class="str">
 		<!-- mail btc usd rub submit -->
 		<form action="" method="POST">
-		<div class="mail" style="color: #FF8000;">asd@asd.asd</div>
-		<div class="user" style="color: #5197FF;">asd123</div>
+		<div class="user" style="color: #FF8000;">h22341sadf@mail.ru
+		<font style="color: #5197FF; float: right;">user453</font></div>
 		<div class="balance"><p>btc: <input type="text" placeholder="0.00000000"></p>
 		<p>usd: <input type="text" placeholder="0.00"></p>
 		<p>rub: <input type="text" placeholder="0.00"></p></div>
 		
 		<input name="submit" type="submit" value="Изменить">
 		</form>
+		<form action="" method="POST">
+			<input type="submit" name="done" value="Открыть чат">
+		</form>
+	</div>
+	<div class="str">
+		<!-- mail btc usd rub submit -->
+		<form action="" method="POST">
+		<div class="user" style="color: #FF8000;">qwerty@yandex.ru
+		<font style="color: #5197FF; float: right;">user223</font></div>
+		<div class="balance"><p>btc: <input type="text" placeholder="0.000000345"></p>
+		<p>usd: <input type="text" placeholder="10.00"></p>
+		<p>rub: <input type="text" placeholder="650.00"></p></div>
+		
+		<input name="submit" type="submit" value="Изменить">
+		</form>
+		<form action="" method="POST">
+			<input type="submit" name="done" value="Открыть чат">
+		</form>
+	</div>
+	<div class="str">
+		<!-- mail btc usd rub submit -->
+		<form action="" method="POST">
+		<div class="user" style="color: #FF8000;">sadfdff22@inbox.ru
+		<font style="color: #5197FF; float: right;">user253</font></div>
+		<div class="balance"><p>btc: <input type="text" placeholder="0.00000677"></p>
+		<p>usd: <input type="text" placeholder="36.00"></p>
+		<p>rub: <input type="text" placeholder="1984.00"></p></div>
+		
+		<input name="submit" type="submit" value="Изменить">
+		</form>
+		<form action="" method="POST">
+			<input type="submit" name="done" value="Открыть чат">
+		</form>
+	</div>
+	<div class="str">
+		<!-- mail btc usd rub submit -->
+		<form action="" method="POST">
+		<div class="user" style="color: #FF8000;">qwerty@yandex.ru
+		<font style="color: #5197FF; float: right;">user223</font></div>
+		<div class="balance"><p>btc: <input type="text" placeholder="0.00000000"></p>
+		<p>usd: <input type="text" placeholder="0.00"></p>
+		<p>rub: <input type="text" placeholder="0.00"></p></div>
+		
+		<input name="submit" type="submit" value="Изменить">
+		</form>
+		<form action="" method="POST">
+			<input type="submit" name="done" value="Открыть чат">
+		</form>
+	</div>
+	<div class="str">
+		<!-- mail btc usd rub submit -->
+		<form action="" method="POST">
+		<div class="user" style="color: #FF8000;">hhsj76sh@mail.ru
+		<font style="color: #5197FF; float: right;">user364</font></div>
+		<div class="balance"><p>btc: <input type="text" placeholder="0.00003444"></p>
+		<p>usd: <input type="text" placeholder="134.00"></p>
+		<p>rub: <input type="text" placeholder="6786.00"></p></div>
+		
+		<input name="submit" type="submit" value="Изменить">
+		</form>
+		<form action="" method="POST">
+			<input type="submit" name="done" value="Открыть чат">
+		</form>
 	</div>
 	<style>
+		body {
+			margin: 0;
+			background-color: #00381f;
+			background-image: url("https://www.transparenttextures.com/patterns/padded-light.png");\
+		}
 		.str {
 			width: 100%;
+			margin-top: 20px;
 			display: inline-block;
 			height: auto;
 		}
@@ -33,6 +102,10 @@
 			padding-left: 5px;
 			border-radius: 5px;
 			background-color: #c0c0c0;
+		}
+
+		.user {
+			width: 200px;
 		}
 	</style>
 </body>
